@@ -340,6 +340,8 @@ write_network_file(net_definition* def, const char* rootdir, const char* path)
         g_string_append_printf(s, "RouteMetric=%i\n", (def->type == ND_WIFI ? 600 : 100));
         if (g_strcmp0(def->dhcp_identifier, "duid") != 0)
             g_string_append_printf(s, "ClientIdentifier=%s\n", def->dhcp_identifier);
+        if (def->critical)
+            g_string_append_printf(s, "CriticalConnection=true\n");
     }
 
     g_string_free_to_file(s, rootdir, path, ".network");
