@@ -65,6 +65,7 @@ typedef struct net_definition {
 
     /* status options */
     gboolean optional;
+    gboolean critical;
 
     /* addresses */
     gboolean dhcp4;
